--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 21.0,
+"row": 44,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -38,13 +38,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 5.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 4,
-"selection_to_column": 79,
-"selection_to_line": 13,
+"row": 418,
+"scroll_position": 410.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
