--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://GameScene/game.tscn", "res://Scenes/sacrifice.tscn", "res://Scenes/spawning_area.tscn", "res://Scenes/work_place_01.tscn", "res://Scenes/basic_minion.tscn")
-current_scene="res://GameScene/game.tscn"
+current_scene="res://Scenes/basic_minion.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scenes/basic_minion.gd", "res://Scenes/entry_scene.gd", "res://GameScene/game.gd", "res://Scenes/mana_from_click.gd", "res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2D.gd", "res://Scenes/plus_mana_worsh.gd", "res://Scenes/sacrifice.gd", "res://Scenes/spawning_area.gd", "res://Scenes/work_place_01.gd"]
 selected_script="res://Scenes/basic_minion.gd"
-open_help=["AnimationPlayer", "SceneTree"]
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 
