--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,22 +13,22 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-493
+dock_hsplit_3=-451
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Art/SourceFiles/summoning_tutorial.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sounds/", "res://Art/", "res://Art/SourceFiles/")
+dock_filesystem_selected_paths=PackedStringArray("res://Art/SourceFiles/idle_acolyte-Sheet.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sounds/", "res://Scenes/", "res://PrefabedScenes/", "res://NewGame/", "res://Art/", "res://Art/SourceFiles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://GameScene/game.tscn", "res://Scenes/sacrifice.tscn", "res://Scenes/spawning_area.tscn", "res://Scenes/work_place_01.tscn", "res://Scenes/basic_minion.tscn")
-current_scene="res://Scenes/basic_minion.tscn"
+open_scenes=PackedStringArray("res://GameScene/game.tscn", "res://Scenes/basic_minion.tscn", "res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn")
+current_scene="res://NewGame/new_game.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,10 +36,10 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/basic_minion.gd", "res://Scenes/entry_scene.gd", "res://GameScene/game.gd", "res://Scenes/mana_from_click.gd", "res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2D.gd", "res://Scenes/plus_mana_worsh.gd", "res://Scenes/sacrifice.gd", "res://Scenes/spawning_area.gd", "res://Scenes/work_place_01.gd"]
-selected_script="res://Scenes/basic_minion.gd"
+open_scripts=["res://NewGame/acolyte.gd", "res://Scenes/basic_minion.gd", "res://GameScene/game.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd"]
+selected_script="res://NewGame/new_game.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=194
 list_split_offset=0
 
 [ShaderEditor]
