--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 45.0,
-"selection": false,
+"row": 37,
+"scroll_position": 24.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 37,
+"selection_to_column": 17,
+"selection_to_line": 38,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,16 +21,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 6,
-"selection_to_column": 51,
-"selection_to_line": 6,
+"row": 3,
+"scroll_position": 6.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,12 +35,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 225,
-"scroll_position": 212.0,
-"selection": false,
+"row": 222,
+"scroll_position": 211.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 218,
+"selection_to_column": 24,
+"selection_to_line": 222,
 "syntax_highlighter": "GDScript"
 }
 
@@ -136,6 +140,34 @@ state={
 "h_scroll_position": 0,
 "row": 2,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://NewGame/new_game.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 31,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://NewGame/acolyte.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 70,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
