--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/stejs/Downloads/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
+executable_path="/private/var/folders/z0/9bvxc6wx7vl7cs_yj9yhmlxm0000gn/T/AppTranslocation/A9D81799-B42A-44CF-95A0-16CF85B4FB8E/d/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 tile_source_sort=0
 
@@ -20,7 +20,7 @@ advanced_mode=false
 
 [dialog_bounds]
 
-project_settings=Rect2(469, 269, 900, 700)
+project_settings=Rect2(469, 200, 900, 700)
 create_new_node=Rect2(544, 162, 900, 700)
 search_help=Rect2(84, 340, 960, 540)
 export=Rect2(3070, 190, 900, 700)
