--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,13 +32,13 @@ current_scene="res://Scenes/spawning_area.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
 open_scripts=["res://NewGame/acolyte.gd", "res://Scenes/basic_minion.gd", "res://GameScene/game.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd"]
 selected_script="res://Scenes/spawning_area.gd"
-open_help=[]
+open_help=["CharacterBody2D", "CollisionObject2D"]
 script_split_offset=194
 list_split_offset=0
 
