--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://GameScene/game.tscn", "res://Scenes/basic_minion.tscn", "res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://UI/menu_ui.tscn")
-current_scene="res://Scenes/spawning_area.tscn"
+open_scenes=PackedStringArray("res://GameScene/game.tscn", "res://Scenes/basic_minion.tscn", "res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn")
+current_scene="res://NewGame/acolyte.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://NewGame/acolyte.gd", "res://Scenes/basic_minion.gd", "res://GameScene/game.gd", "res://game_manager.gd", "res://UI/menu_ui.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd"]
-selected_script="res://Scenes/spawning_area.gd"
+selected_script="res://NewGame/acolyte.gd"
 open_help=["CharacterBody2D", "CollisionObject2D"]
 script_split_offset=194
 list_split_offset=0
