--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/stejs/Downloads/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
+executable_path="/private/var/folders/z0/9bvxc6wx7vl7cs_yj9yhmlxm0000gn/T/AppTranslocation/6A6B0B92-A42E-4DF3-B66D-11B54C635B84/d/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 tile_source_sort=0
 
