--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,23 +12,23 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=266
 dock_hsplit_3=-451
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/menu_ui.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Sounds/", "res://Scenes/", "res://PrefabedScenes/", "res://NewGame/", "res://Art/", "res://Art/SourceFiles/")
+dock_filesystem_selected_paths=PackedStringArray("res://NewGame/new_game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sounds/", "res://Scenes/", "res://PrefabedScenes/", "res://NewGame/", "res://GameScene/", "res://Art/", "res://Art/SourceFiles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://UI/menu_ui.tscn", "res://MainMenu/main_menu.tscn", "res://HUD/hud.tscn")
-current_scene="res://Scenes/spawning_area.tscn"
+open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://HUD/hud.tscn")
+current_scene="res://HUD/hud.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://NewGame/acolyte.gd", "res://Scenes/basic_minion.gd", "res://GameScene/game.gd", "res://game_manager.gd", "res://UI/menu_ui.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd"]
-selected_script="res://Scenes/spawning_area.gd"
-open_help=["CharacterBody2D", "CollisionObject2D"]
+open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd"]
+selected_script="res://HUD/hud.gd"
+open_help=[]
 script_split_offset=194
 list_split_offset=0
 
