--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 37,
-"scroll_position": 0.0,
+"scroll_position": 12.0,
 "selection": true,
 "selection_from_column": 1,
 "selection_from_line": 37,
@@ -21,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 12.0,
+"row": 38,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -39,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 222,
-"scroll_position": 0.0,
+"scroll_position": 197.0,
 "selection": true,
 "selection_from_column": 2,
 "selection_from_line": 218,
@@ -163,12 +163,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 90,
-"scroll_position": 81.0,
-"selection": false,
+"row": 2,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 21,
+"selection_from_line": 2,
+"selection_to_column": 55,
+"selection_to_line": 2,
 "syntax_highlighter": "GDScript"
 }
 
@@ -177,24 +181,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 17,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://UI/menu_ui.gd]
+[res://HUD/hud.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
