Upgrades mechanisms preparation
bonus money and additional spawn numbers

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://NewGame/new_game.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://GameScene/game.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sounds/", "res://Scenes/", "res://PrefabedScenes/", "res://NewGame/", "res://GameScene/", "res://Art/", "res://Art/SourceFiles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,7 +31,7 @@ open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/
 current_scene="res://HUD/hud.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
