--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 38,
-"scroll_position": 27.0,
+"scroll_position": 34.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -38,13 +38,13 @@ state={
 "column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 222,
-"scroll_position": 197.0,
+"row": 126,
+"scroll_position": 99.6399,
 "selection": true,
-"selection_from_column": 2,
-"selection_from_line": 218,
+"selection_from_column": 18,
+"selection_from_line": 126,
 "selection_to_column": 24,
-"selection_to_line": 222,
+"selection_to_line": 126,
 "syntax_highlighter": "GDScript"
 }
 
@@ -149,11 +149,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 0.0,
+"row": 20,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -181,12 +181,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
-"selection": false,
+"row": 19,
+"scroll_position": 4.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 19,
+"selection_to_column": 36,
+"selection_to_line": 19,
 "syntax_highlighter": "GDScript"
 }
 
@@ -195,11 +199,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 57,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
+"h_scroll_position": 49,
+"row": 18,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
