--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/private/var/folders/z0/9bvxc6wx7vl7cs_yj9yhmlxm0000gn/T/AppTranslocation/5509B15D-B4EA-4CCF-9736-D1AF87CAA692/d/Godot.app/Contents/MacOS/Godot"
+executable_path="C:/Users/stejs/Downloads/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
 use_advanced_connections=false
 tile_source_sort=0
 
