preparation for UPDATE UI

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://HUD/hud.tscn")
-current_scene="res://HUD/hud.tscn"
+open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://HUD/hud.tscn", "res://UI/updates_ui.tscn")
+current_scene="res://UI/updates_ui.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd"]
-selected_script="res://HUD/hud.gd"
-open_help=[]
+open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd", "res://UI/updates_ui.gd"]
+selected_script="res://UI/updates_ui.gd"
+open_help=["Tween"]
 script_split_offset=194
 list_split_offset=0
 
