another work on UI
hide and show upgrade panels

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 79,
+"row": 37,
 "scroll_position": 59.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 16,
+"selection_from_line": 37,
+"selection_to_column": 26,
+"selection_to_line": 37,
 "syntax_highlighter": "GDScript"
 }
 
@@ -195,24 +199,42 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 98,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 39.0,
-"selection": false,
+"row": 49,
+"scroll_position": 31.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 49,
+"selection_to_column": 73,
+"selection_to_line": 54,
 "syntax_highlighter": "GDScript"
 }
 
-[res://UI/updates_ui.gd]
+[res://UI/StaticUpgrades_ui.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 27,
+"scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/spawn_upgrades_ui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 60,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
