--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -199,16 +199,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 31.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 49,
-"selection_to_column": 73,
-"selection_to_line": 54,
+"row": 37,
+"scroll_position": 26.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -221,7 +217,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 27,
-"scroll_position": 3.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
