UI almost prepared
the codfe part - working upgrades with working tooltips that change according to the correct values

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/new_game.tscn", "res://NewGame/acolyte.tscn", "res://HUD/hud.tscn", "res://UI/StaticUpgrades_ui.tscn", "res://UI/spawn_upgrades_ui.tscn", "res://UI/lower_bar.tscn")
-current_scene="res://UI/StaticUpgrades_ui.tscn"
+current_scene="res://UI/lower_bar.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://UI/lower_bar.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd", "res://UI/spawn_upgrades_ui.gd", "res://UI/StaticUpgrades_ui.gd"]
-selected_script="res://UI/StaticUpgrades_ui.gd"
-open_help=["TextureButton", "Tween"]
+selected_script="res://UI/lower_bar.gd"
+open_help=[]
 script_split_offset=194
 list_split_offset=0
 
