--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/stejs/Downloads/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
+executable_path="/private/var/folders/z0/9bvxc6wx7vl7cs_yj9yhmlxm0000gn/T/AppTranslocation/6C5D4CF0-6E2A-48A1-913E-21E4E7387F3E/d/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 tile_source_sort=0
 
