so many changes
mainly the lower UI bar and also rmb can close upgrade menus

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -171,11 +171,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 63,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 76.0,
+"row": 22,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,12 +203,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 16,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 27,
+"selection_from_line": 16,
+"selection_to_column": 35,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -220,9 +224,13 @@ state={
 "column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
-"selection": false,
+"row": 5,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 5,
+"selection_to_column": 33,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -231,12 +239,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([50, 60, 69]),
+"column": 0,
+"folded_lines": Array[int]([56, 66, 75]),
 "h_scroll_position": 0,
-"row": 60,
-"scroll_position": 0.0,
-"selection": false,
+"row": 24,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 24,
+"selection_to_column": 70,
+"selection_to_line": 27,
 "syntax_highlighter": "GDScript"
 }
 
@@ -245,11 +257,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 16,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -259,10 +271,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
