--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -221,16 +221,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 9.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 5,
-"selection_to_column": 33,
-"selection_to_line": 5,
+"row": 8,
+"scroll_position": 47.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
