--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,16 +21,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 71,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 48,
-"scroll_position": 39.0,
-"selection": true,
-"selection_from_column": 46,
-"selection_from_line": 48,
-"selection_to_column": 71,
-"selection_to_line": 48,
+"row": 3,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -153,16 +149,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 2.0,
-"selection": true,
-"selection_from_column": 15,
-"selection_from_line": 17,
-"selection_to_column": 32,
-"selection_to_line": 17,
+"row": 14,
+"scroll_position": 11.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -171,11 +163,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 55,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 12.0,
+"row": 2,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,16 +195,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 52,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 19,
+"scroll_position": 8.0,
 "selection": true,
-"selection_from_column": 27,
-"selection_from_line": 16,
-"selection_to_column": 35,
-"selection_to_line": 16,
+"selection_from_column": 47,
+"selection_from_line": 19,
+"selection_to_column": 52,
+"selection_to_line": 19,
 "syntax_highlighter": "GDScript"
 }
 
@@ -221,11 +213,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 47.0,
+"row": 35,
+"scroll_position": 54.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -253,11 +245,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 4.0,
+"row": 30,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
