--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -3,6 +3,8 @@
 executable_path="C:/Users/stejs/Downloads/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
 use_advanced_connections=false
 tile_source_sort=0
+tile_snap_option=0
+tile_snap_subdiv=4.0
 
 [debug_options]
 
