--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Art/SourceFiles/tileset.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Art/SourceFiles/floor_tileset.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://GameScene/", "res://Art/", "res://Art/SourceFiles/", "res://Art/icons/", "res://Art/coin/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -37,7 +37,7 @@ selected_bottom_panel_item=12
 [ScriptEditor]
 
 open_scripts=["res://NewGame/acolyte.gd", "res://Scenes/entry_scene.gd", "res://GameScene/game.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://UI/lower_bar.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd", "res://UI/spawn_upgrades_ui.gd", "res://UI/StaticUpgrades_ui.gd", "res://Singletons/upgrades_manager.gd", "res://Scenes/work_place_01.gd"]
-selected_script="res://NewGame/new_game.gd"
+selected_script="res://Scenes/spawning_area.gd"
 open_help=[]
 script_split_offset=194
 list_split_offset=0
