--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -39,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 126,
-"scroll_position": 99.6399,
+"scroll_position": 88.0,
 "selection": true,
 "selection_from_column": 18,
 "selection_from_line": 126,
@@ -149,12 +149,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 3.0,
-"selection": false,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 2,
+"selection_to_column": 55,
+"selection_to_line": 2,
 "syntax_highlighter": "GDScript"
 }
 
@@ -185,7 +189,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 8.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 47,
 "selection_from_line": 19,
@@ -199,12 +203,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 10.0,
-"selection": false,
+"row": 2,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 7,
+"selection_from_line": 2,
+"selection_to_column": 17,
+"selection_to_line": 2,
 "syntax_highlighter": "GDScript"
 }
 
@@ -231,7 +239,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 30,
-"scroll_position": 0.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -245,6 +253,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://NewGame/Scull.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
