faster auto click upgrade

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 87,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 63,
-"scroll_position": 0.0,
-"selection": false,
+"row": 37,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 29,
+"selection_from_line": 37,
+"selection_to_column": 45,
+"selection_to_line": 37,
 "syntax_highlighter": "GDScript"
 }
 
@@ -163,11 +167,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 102,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 2.0,
+"row": 22,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -195,12 +199,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 77,
-"scroll_position": 43.0,
-"selection": false,
+"row": 70,
+"scroll_position": 54.0,
+"selection": true,
+"selection_from_column": 14,
+"selection_from_line": 70,
+"selection_to_column": 32,
+"selection_to_line": 70,
 "syntax_highlighter": "GDScript"
 }
 
@@ -209,11 +217,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([64, 75]),
+"column": 36,
+"folded_lines": Array[int]([69, 80]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 8.0,
+"row": 120,
+"scroll_position": 95.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -237,10 +245,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
