preparing general tooltips

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -185,16 +185,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 33.0,
-"selection": true,
-"selection_from_column": 47,
-"selection_from_line": 19,
-"selection_to_column": 52,
-"selection_to_line": 19,
+"row": 30,
+"scroll_position": 9.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -221,11 +217,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 23,
 "folded_lines": Array[int]([75, 86]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 9.0,
+"row": 19,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
