random animation after spawn

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -149,16 +149,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 14,
-"selection_from_line": 86,
-"selection_to_column": 26,
-"selection_to_line": 86,
+"row": 85,
+"scroll_position": 72.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -212,8 +208,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 93,
-"scroll_position": 60.0,
+"row": 62,
+"scroll_position": 76.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
