--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=51
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=277
+dock_hsplit_2=170
 dock_hsplit_3=-278
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Fonts/aldo_the_apache/AldotheApache.ttf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scenes/", "res://PrefabedScenes/", "res://NewGame/", "res://GameScene/", "res://Fonts/", "res://Fonts/aldo_the_apache/", "res://Art/", "res://Art/SourceFiles/", "res://Art/icons/", "res://Art/coin/", "res://addons/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Fonts/", "res://Fonts/aldo_the_apache/", "res://Art/SourceFiles/", "res://Art/icons/", "res://Art/coin/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://Scenes/spawning_area.tscn", "res://NewGame/
 current_scene="res://UI/lower_bar.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://UI/lower_bar.gd", "res://NewGame/new_game.gd", "res://Scenes/spawning_area.gd", "res://UI/spawn_upgrades_ui.gd", "res://UI/StaticUpgrades_ui.gd", "res://Singletons/upgrades_manager.gd"]
-selected_script="res://UI/lower_bar.gd"
+open_scripts=["res://NewGame/acolyte.gd", "res://game_manager.gd", "res://HUD/hud.gd", "res://UI/lower_bar.gd", "res://NewGame/new_game.gd", "res://NewGame/Scull.gd", "res://Scenes/spawning_area.gd", "res://UI/spawn_upgrades_ui.gd", "res://UI/StaticUpgrades_ui.gd", "res://Singletons/upgrades_manager.gd"]
+selected_script="res://NewGame/Scull.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=117
