--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 4,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 68,
-"scroll_position": 60.0,
+"h_scroll_position": 93,
+"row": 41,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,16 +35,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 88.0,
+"row": 245,
+"scroll_position": 96.0,
 "selection": true,
-"selection_from_column": 18,
-"selection_from_line": 126,
-"selection_to_column": 24,
-"selection_to_line": 126,
+"selection_from_column": 9,
+"selection_from_line": 245,
+"selection_to_column": 13,
+"selection_to_line": 245,
 "syntax_highlighter": "GDScript"
 }
 
@@ -135,16 +135,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 21,
-"selection_from_line": 23,
-"selection_to_column": 22,
-"selection_to_line": 23,
+"row": 22,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -231,7 +227,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 59,
-"scroll_position": 0.0,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
