--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/stejs/Downloads/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
+executable_path="/private/var/folders/z0/9bvxc6wx7vl7cs_yj9yhmlxm0000gn/T/AppTranslocation/3D423AAF-D904-4F7B-B45D-5D4A0D9E72E3/d/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 tile_source_sort=0
 tile_snap_option=0
@@ -77,7 +77,7 @@ last_selected_language="GDScript"
 
 [export_options]
 
-default_filename="summon_004"
+default_filename="summon"
 
 [shader_setup]
 
